; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_FreeHostCache.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_FreeHostCache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HostCacheList = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FreeHostCache() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32*, align 8
  store i64 0, i64* %1, align 8
  br label %3

3:                                                ; preds = %14, %0
  %4 = load i64, i64* %1, align 8
  %5 = load i32*, i32** @HostCacheList, align 8
  %6 = call i64 @LIST_NUM(i32* %5)
  %7 = icmp slt i64 %4, %6
  br i1 %7, label %8, label %17

8:                                                ; preds = %3
  %9 = load i32*, i32** @HostCacheList, align 8
  %10 = load i64, i64* %1, align 8
  %11 = call i32* @LIST_DATA(i32* %9, i64 %10)
  store i32* %11, i32** %2, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @Free(i32* %12)
  br label %14

14:                                               ; preds = %8
  %15 = load i64, i64* %1, align 8
  %16 = add nsw i64 %15, 1
  store i64 %16, i64* %1, align 8
  br label %3

17:                                               ; preds = %3
  %18 = load i32*, i32** @HostCacheList, align 8
  %19 = call i32 @ReleaseList(i32* %18)
  store i32* null, i32** @HostCacheList, align 8
  ret void
}

declare dso_local i64 @LIST_NUM(i32*) #1

declare dso_local i32* @LIST_DATA(i32*, i64) #1

declare dso_local i32 @Free(i32*) #1

declare dso_local i32 @ReleaseList(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
